--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,11 +6,12 @@
 	align-items: center;
 	gap: 2em;
 	background-color: var(--primary);
+	font-size: 1.3em;
 	border-radius: var(--border-radius-regular);
 	margin: auto;
 	padding: 0.25em 1em;
 	box-sizing: border-box;
-	z-index: 1;
+	z-index: 2;
 }
 
 .header_btn {
@@ -24,6 +25,7 @@
 	position: fixed;
 	inset: 0;
 	background-color: #fff;
+	z-index: 1;
 }
 
 .mobile_menu {
@@ -33,20 +35,8 @@
 	grid-auto-flow: row;
 	justify-items: start;
 	gap: 0.75em;
-	font-size: 22px;
+	font-size: 4vw;
 	margin: auto;
-}
-
-@media screen and (min-width: 1024px) {
-	.header {
-		font-size: 21px;
-	}
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-	.header {
-		font-size: 16px;
-	}
 }
 
 @media screen and (max-width: 768px) {
