--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,7 +3,7 @@
 	gap: 2.5em 0;
 	background-color: var(--secondary);
 	color: #fff;
-	font-size: 18px;
+	font-size: 1.3em;
 	border-radius: var(--border-radius-big) var(--border-radius-big) 0 0;
 	padding: 3em 3em 0.75em 3em;
 	box-sizing: border-box;
@@ -53,22 +53,6 @@
 	padding-top: 2.5em;
 }
 
-@media screen and (min-width: 1024px) {
-	.footer_logo {
-		font-size: 21px;
-	}
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-	.footer {
-		font-size: 16px;
-	}
-
-	.footer_logo {
-		font-size: 16px;
-	}
-}
-
 @media screen and (min-width: 768px) {
 	.footer {
 		grid-auto-columns: max-content;
@@ -89,7 +73,6 @@
 			'social .'
 			'bottom_part bottom_part';
 		justify-content: space-between;
-		font-size: 15px;
 	}
 }
 
@@ -104,7 +87,6 @@
 			'bottom_part';
 		grid-template-columns: 1fr;
 		justify-items: center;
-		font-size: 17px;
 		text-align: center;
         padding-inline: 2em;
 		border-radius: 0;
