--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,47 +1,60 @@
 .header {
-	position: sticky;
-	top: 0px;
-	display: grid;
-	grid-template-columns: 6em 1fr max-content;
-	align-items: center;
-	gap: 2em;
-	background-color: var(--primary);
-	font-size: 1.3em;
-	border-radius: var(--border-radius-regular);
-	margin: auto;
-	padding: 0.25em 1em;
-	box-sizing: border-box;
-	z-index: 2;
+    position: sticky;
+    top: 0px;
+    display: grid;
+    grid-template-columns: 6em 1fr max-content;
+    align-items: center;
+    gap: 2em;
+    background-color: var(--primary);
+    font-size: 1.3em;
+    border-radius: var(--border-radius-regular);
+    margin: auto;
+    padding: 0.25em 1em;
+    box-sizing: border-box;
+    z-index: 2;
 }
 
 .header_btn {
-	background-color: #fff;
-	color: var(--primary);
-	font-weight: 600;
-	padding-inline: 3em;
+    background-color: #fff;
+    color: var(--primary);
+    font-weight: 600;
+    padding-inline: 3em;
 }
 
 .menu_overlay {
-	position: fixed;
-	inset: 0;
-	background-color: #fff;
-	z-index: 1;
+    position: fixed;
+    inset: 0;
+    background-color: #fff;
+    z-index: 1;
 }
 
 .mobile_menu {
-	--color: #263238;
-	width: 90vw;
-	max-width: 1200px;
-	grid-auto-flow: row;
-	justify-items: start;
-	gap: 0.75em;
-	font-size: 4vw;
-	margin: auto;
+    --color: #263238;
+    width: 90vw;
+    max-width: 1200px;
+    grid-auto-flow: row;
+    justify-items: start;
+    gap: 0.75em;
+    margin: auto;
 }
 
 @media screen and (max-width: 768px) {
-	.header {
-		grid-template-columns: 6em max-content;
-		justify-content: space-between;
-	}
+    .header {
+        grid-template-columns: 6em max-content;
+        justify-content: space-between;
+    }
+
+    .mobile_menu {
+        font-size: 2.5em;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .header {
+        font-size: 1.75em;
+    }
+
+    .mobile_menu {
+        font-size: 3em;
+    }
 }
