--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     gap: 2em;
     background-color: var(--primary);
+    color: #fff;
     font-size: 1.3em;
     border-radius: var(--border-radius-regular);
     margin: auto;
@@ -21,40 +22,15 @@
     padding-inline: 3em;
 }
 
-.menu_overlay {
-    position: fixed;
-    inset: 0;
-    background-color: #fff;
-    z-index: 1;
-}
-
-.mobile_menu {
-    --color: #263238;
-    width: 90vw;
-    max-width: 1200px;
-    grid-auto-flow: row;
-    justify-items: start;
-    gap: 0.75em;
-    margin: auto;
-}
-
 @media screen and (max-width: 768px) {
     .header {
         grid-template-columns: 6em max-content;
         justify-content: space-between;
-    }
-
-    .mobile_menu {
-        font-size: 2.5em;
     }
 }
 
 @media screen and (max-width: 550px) {
     .header {
         font-size: 1.75em;
-    }
-
-    .mobile_menu {
-        font-size: 3em;
     }
 }
