--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,6 +1,6 @@
 .footer {
 	display: grid;
-	gap: 2.5em 0;
+	grid-gap: 2.5em 0;
 	background-color: var(--secondary);
 	color: #fff;
 	font-size: 1.3em;
@@ -27,13 +27,13 @@
 .info_list {
 	display: grid;
 	grid-area: info;
-	gap: 0.75em;
+	grid-gap: 0.75em;
 }
 
 .navigation {
 	display: grid;
 	grid-area: nav;
-	gap: 0.75em;
+	grid-gap: 0.75em;
 }
 
 .social {
@@ -41,19 +41,19 @@
 	grid-auto-flow: column;
 	grid-auto-columns: max-content;
 	grid-area: social;
-	gap: 0.75em;
+	grid-gap: 0.75em;
 }
 
 .bottom_part {
 	display: grid;
 	width: 100%;
 	grid-area: bottom_part;
-	gap: 0.2em 2.5em;
+	grid-gap: 0.2em 2.5em;
 	border-top: 1px solid #fff;
 	padding-top: 2.5em;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
 	.footer {
 		grid-auto-columns: max-content;
 		grid-template-areas:
@@ -90,7 +90,7 @@
 		text-align: center;
         padding-inline: 2em;
 		border-radius: 0;
-		gap: 2em;
+		grid-gap: 2em;
 		font-size: 1.75em;
 	}
 }
