--- a/src/components/common/video/video.module.css
+++ b/src/components/common/video/video.module.css
@@ -2,12 +2,20 @@
     position: relative;
     width: 50vw;
     height: 25vw;
-    background-color: rebeccapurple;
+}
+
+.video_inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius-big);
+    overflow: hidden;
 }
 
 .video_placement video {
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 .play_btn {
@@ -16,10 +24,23 @@
     right: 0;
     width: 5em;
     height: 5em;
-    border: 1px solid;
+    background-color: #fff;
+    background-image: url(/icons/pause-icon.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-origin: content-box;
+    border: 1px solid rgba(0, 0, 0, 0.5);
     border-radius: 100%;
+    padding: 1.6em;
+    box-sizing: border-box;
     cursor: pointer;
     transform: translate(25%, -50%);
+    transition: background-image 0.3s;
+}
+
+.paused .play_btn {
+    background-image: url(/icons/play-icon.png);
 }
 
 /* control bar */
@@ -31,7 +52,7 @@
     grid-template-columns: 1fr max-content;
     grid-gap: 1em;
     align-items: center;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 0.25em 1em;
     box-sizing: border-box;
 }
@@ -46,7 +67,7 @@
 
 .current_progress {
     height: 100%;
-    background-color: red;
+    background-color: var(--primary);
     border-radius: 1em;
 }
 
