--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,7 +11,6 @@
     border-radius: var(--border-radius-regular);
     margin: auto;
     padding: 0.25em 1em;
-    box-sizing: border-box;
     z-index: 2;
 }
 
@@ -20,7 +19,7 @@
     color: var(--primary);
     font-weight: 600;
     padding-inline: 3em;
-    transition: all 0.3s;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .header_btn:hover {
