--- a/src/components/common/download-at-buttons/download-at-buttons.module.css
+++ b/src/components/common/download-at-buttons/download-at-buttons.module.css
@@ -7,6 +7,11 @@
 
 .download_app a {
     display: inline-grid;
+    transition: transform 0.3s;
+}
+
+.download_app a:hover {
+    transform: scale(1.025);
 }
 
 .download_app img {
