--- a/src/components/main-page/features/features.module.css
+++ b/src/components/main-page/features/features.module.css
@@ -4,7 +4,7 @@
 
 .feature_list {
 	display: grid;
-	gap: 2em 1em;
+	grid-gap: 2em 1em;
 }
 
 .feature {
@@ -17,16 +17,16 @@
 	grid-template-columns: 5em 1fr;
 	grid-template-rows: 1fr max-content max-content 1fr;
 	grid-gap: 0.2em 1em;
+    align-items: center;
 	background-color: rgb(64, 123, 255, 0.35);
 	border-radius: var(--border-radius-regular);
 	overflow: hidden;
 	padding: 2em;
-	box-sizing: border-box;
 }
 
 .icon {
     width: 100%;
-    height: 100%;
+    height: auto;
 	grid-area: icon;
 }
 
