--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -1,7 +1,10 @@
 .button {
 	display: block;
+	font-size: 1em;
 	text-align: center;
 	text-decoration: none;
+	border: none;
 	border-radius: var(--border-radius-small);
 	padding: 0.5em 2em;
+	cursor: pointer;
 }
