--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -62,6 +62,7 @@
 	width: 100%;
 	grid-gap: 0.2em 2.5em;
 	grid-area: bottom_part;
+	justify-items: center;
 	border-top: 1px solid #fff;
 	padding-top: 2.5em;
 }
