--- a/src/components/main-page/download-at/download-at.module.css
+++ b/src/components/main-page/download-at/download-at.module.css
@@ -1,27 +1,20 @@
-.download_section {
+.download_section > div {
 	position: relative;
 	background-color: var(--secondary);
 	color: #fff;
 	border-radius: var(--border-radius-regular);
 	overflow: hidden;
-}
-
-.download_section > * {
-	position: relative;
-	z-index: 1;
-}
-
-.download_section::before,
-.download_section::after {
-	content: '';
-	position: absolute;
-	inset: 0;
-}
-
-.download_section > div {
 	display: grid;
 	grid-gap: 0.5em;
 	font-size: 1.1em;
+}
+
+.download_section > div::before,
+.download_section > div::after {
+	content: '';
+	position: absolute;
+	inset: 0;
+	z-index: 1;
 }
 
 .headline {
@@ -33,12 +26,12 @@
 }
 
 @media screen and (min-width: 769px) {
-	.download_section::before {
+	.download_section > div::before {
 		background: url(/images/download-at-bg_top.png) 0 0 no-repeat;
 		background-size: 100%;
 	}
 
-	.download_section::after {
+	.download_section > div::after {
 		background: url(/images/download-at-bg_bottom.png) 0 100% no-repeat;
 		background-size: 100%;
 	}
@@ -58,15 +51,20 @@
 		width: 19.5em;
 		height: auto;
 	}
+
+	.image > img {
+		width: 100%;
+		height: auto;
+	}
 }
 
 @media screen and (max-width: 768px) {
-	.download_section::before {
+	.download_section > div::before {
 		background: url(/images/download-at-bg_top-mobile.png) 0 0 no-repeat;
 		background-size: 100%;
 	}
 
-	.download_section::after {
+	.download_section > div::after {
 		background: url(/images/download-at-bg_bottom-mobile.png) 0 65% no-repeat;
 		background-size: 100%;
 	}
@@ -84,6 +82,11 @@
 		height: 30em;
 		justify-self: center;
 		margin-bottom: 2em;
+	}
+
+	.image > img {
+		width: auto;
+		height: 100%;
 	}
 }
 
