--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,9 +1,9 @@
 .header_nav {
 	display: grid;
 	grid-auto-flow: column;
+	grid-gap: 1.25em;
 	justify-content: start;
 	align-items: center;
-	grid-gap: 1.25em;
 
 }
 
@@ -11,6 +11,7 @@
 	position: relative;
 	color: inherit;
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .navigation_button::after {
