--- a/src/components/main-page/contact-us/contact-us.module.css
+++ b/src/components/main-page/contact-us/contact-us.module.css
@@ -3,7 +3,7 @@
 }
 
 .form button {
-    background-color: var(--secondary);
+    background-color: var(--primary);
     color: #fff;
     transition: background-color 0.3s, color 0.3s;
 }
