--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,12 +15,79 @@ body {
 	--border-radius-big: 1.5em;
 }
 
-body > div {
+#__next {
 	display: grid;
 	min-height: 100vh;
 	grid-template-rows: max-content 1fr max-content;
 	grid-gap: 6em;
 	padding-top: 2em;
+}
+
+#__next:has(div.loader-wrapper) {
+	overflow: hidden;
+}
+
+#__next:has(div.loader-wrapper) > *:not(.loader-wrapper) {
+	display: none;
+}
+
+#__next > *:not(.loader-wrapper) {
+	opacity: 0;
+	animation: fadeIn 0.5s forwards;
+}
+
+.loader-wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: grid;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-content: center;
+	background-color: #fff;
+}
+
+.loader {
+	display: grid;
+    width: 9em;
+	aspect-ratio: 3.15/1;
+	grid-template-columns: 0.8em 3.33em 3.33em 0.8em;
+    grid-gap: 0.5em;
+}
+
+.loader .logo_letter {
+	animation: puls 2s calc(0.1s * var(--index)) infinite;
+}
+
+.loader .logo_letter[data-letter='i1'] {
+	--index: 1;
+	background: url(/images/logo-blue.png) 0 0 no-repeat;
+	background-size: auto 100%;
+}
+.loader .logo_letter[data-letter='z1'] {
+	--index: 2;
+	background: url(/images/logo-blue.png) 18.5% 0 no-repeat;
+	background-size: auto 100%;
+}
+.loader .logo_letter[data-letter='z2'] {
+	--index: 3;
+	background: url(/images/logo-blue.png) 81.5% 0 no-repeat;
+	background-size: auto 100%;
+}
+.loader .logo_letter[data-letter='i2'] {
+	--index: 4;
+	background: url(/images/logo-blue.png) 0 0 no-repeat;
+	background-size: auto 100%;
+}
+
+@keyframes puls {
+	0%, 20%, 100% {
+		transform: scale(1);
+	}
+	10% {
+		transform: scale(1.1);
+	}
 }
 
 main {
@@ -87,5 +154,14 @@ h3 {
 	}
 	to {
 		transform: translateY(0.5em);
+	}
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
 	}
 }
