footer links changed

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -29,6 +29,15 @@
 	grid-area: info;
 }
 
+.info_list a {
+	border-bottom: 1px solid transparent;
+	transition: border-color 0.3s;
+}
+
+.info_list a:hover {
+	border-color: #fff;
+}
+
 .navigation {
 	display: grid;
 	grid-gap: 0.75em;
