--- a/src/components/home-page/contact-us/contact-us.module.css
+++ b/src/components/home-page/contact-us/contact-us.module.css
@@ -26,7 +26,7 @@
 
 @media screen and (min-width: 769px) {
     .contact_section > div {
-        background: url(/images/contact-us-bg.svg) 100% 100% no-repeat var(--tertiary);
+        background: url(/images/home-page/contact-us-bg.svg) 100% 100% no-repeat var(--tertiary);
         background-size: auto 95%;
         border-radius: var(--border-radius-regular);
         padding: 4em 5em 7em;
